# formula_certa

./: .env_model  README.md  pyproject.toml
src/rules/: transform_clients.py
src/tools/: extract_txt.py
