[tool.poetry]
name = "formula-certa"
version = "0.1.0"
description = ""
authors = ["Brenno Kenji <brennokoj@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
dotenv-python = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
